[tool.poetry]
name = "helialux-to-influxdb"
version = "0.1.0"
description = ""
authors = ["Sven Grunewaldt <strayer@olle-orks.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
influxdb = "^5.2.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
